test/error/index4.luau
local n = math.bruh
n.y = nil -- idk how to make it do SETTABLE
